Bug 14121 - smbd returns bad File-ID on filehandle used to create a file or directory
Summary: smbd returns bad File-ID on filehandle used to create a file or directory
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.11.0rc3
Hardware: All All
: P5 regression (vote)
Target Milestone: 4.11
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-10 14:10 UTC by Ralph Böhme
Modified: 2022-03-28 07:46 UTC (History)
4 users (show)

See Also:


Attachments
Patches for v4-11-test (26.63 KB, patch)
2019-09-10 21:10 UTC, Stefan Metzmacher
slow: review+
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2019-09-10 14:10:36 UTC
With the new VFS function SMB_VFS_FS_FILE_ID() we use persistent File-IDs calcluated from a file'd itime stored in the DOS attributes xattr.

Queries for the File-ID like SMB2 QFID Create-Context or GETINFO with appropriate level *on the handle that created the file*, will return the wrong File-ID.

The problem is that fsp->fsp_name->st.st_ex_itime is not updated to the on-disk value.

Have patch, need bugnumber.
Comment 1 Stefan Metzmacher 2019-09-10 21:10:57 UTC
Created attachment 15465 [details]
Patches for v4-11-test
Comment 2 Stefan Metzmacher 2019-09-10 21:12:04 UTC
Comment on attachment 15465 [details]
Patches for v4-11-test

Reviewed offline, pushed to autobuild-v4-11-test
Comment 3 Karolin Seeger 2019-09-11 07:53:37 UTC
Pushed to v4-11-test (and included in rc4).
Closing out bug report.

Thanks!